# metadata-to-csv

./: .gitignore  Cargo.toml
src/: application.rs  main.rs
src/application/: file.rs  program_options.rs
