[package]
name = "metadata-to-csv"
version = "0.1.0"
authors = ["이영욱"]
edition = "2021"
description = "Retrieve metadata from photos and save it in CSV format"
repository = "https://github.com/lyuk98/metadata-to-csv"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
nom-exif = "1.5.2"
